@@ -80,9 +80,9 @@ gimp_rectangle_options_interface_get_type (void)
 {
   static GType iface_type = 0;
 
-  if (!iface_type)
+  if (! iface_type)
     {
-      static const GTypeInfo iface_info =
+      const GTypeInfo iface_info =
       {
         sizeof (GimpRectangleOptionsInterface),
         (GBaseInitFunc)     gimp_rectangle_options_iface_base_init,
