@@ -42,9 +42,9 @@ gimp_unit_get_type (void)
 {
   static GType unit_type = 0;
 
-  if (!unit_type)
+  if (! unit_type)
     {
-      static const GTypeInfo type_info = { 0, };
+      const GTypeInfo type_info = { 0, };
 
       unit_type = g_type_register_static (G_TYPE_INT, "GimpUnit",
                                           &type_info, 0);
@@ -368,9 +368,9 @@ gimp_param_unit_get_type (void)
 {
   static GType spec_type = 0;
 
-  if (!spec_type)
+  if (! spec_type)
     {
-      static const GTypeInfo type_info =
+      const GTypeInfo type_info =
       {
         sizeof (GParamSpecClass),
         NULL, NULL,
