@@ -533,9 +533,9 @@ gimp_param_rgb_get_type (void)
 {
   static GType spec_type = 0;
 
-  if (!spec_type)
+  if (! spec_type)
     {
-      static const GTypeInfo type_info =
+      const GTypeInfo type_info =
       {
         sizeof (GParamSpecClass),
         NULL, NULL,
