@@ -47,9 +47,9 @@ gimp_config_path_get_type (void)
 {
   static GType path_type = 0;
 
-  if (!path_type)
+  if (! path_type)
     {
-      static const GTypeInfo type_info = { 0, };
+      const GTypeInfo type_info = { 0, };
 
       path_type = g_type_register_static (G_TYPE_STRING, "GimpConfigPath",
                                           &type_info, 0);
@@ -90,9 +90,9 @@ gimp_param_config_path_get_type (void)
 {
   static GType spec_type = 0;
 
-  if (!spec_type)
+  if (! spec_type)
     {
-      static const GTypeInfo type_info =
+      const GTypeInfo type_info =
       {
         sizeof (GParamSpecClass),
         NULL, NULL,
