@@ -105,7 +105,7 @@ gimp_preview_get_type (void)
 
   if (! preview_type)
     {
-      static const GTypeInfo preview_info =
+      const GTypeInfo preview_info =
       {
         sizeof (GimpPreviewClass),
         (GBaseInitFunc) NULL,
