@@ -199,7 +199,7 @@ midi_get_type (GTypeModule *module)
 {
   if (! controller_type)
     {
-      static const GTypeInfo controller_info =
+      const GTypeInfo controller_info =
       {
         sizeof (ControllerMidiClass),
         (GBaseInitFunc) NULL,
